@@ -263,6 +263,7 @@ register.caption.displayname=Nazwa wy\u015Bwietlana
 register.caption.email=Email
 register.caption.firstname=Imi\u0119
 register.caption.lastname=Nazwisko
+register.caption.locale=Preferred country & language
 register.caption.newpassword=Nowe has\u0142o
 register.caption.oldpassword=Stare has\u0142o
 register.error.logininvalid=Wybrany login {0} jest ju\u017C w u\u017Cyciu. Wybierz inny.
