@@ -126,6 +126,7 @@ STATEMENT_CREATE_WIKI_USER_TABLE = \
       last_login_ip_address VARCHAR(15) NOT NULL, \
       is_admin INTEGER DEFAULT 0 NOT NULL, \
       remember_key VARCHAR(100) NOT NULL, \
+      default_locale VARCHAR(8), \
       CONSTRAINT jam_pk_wiki_user PRIMARY KEY (wiki_user_id) \
     )
 STATEMENT_CREATE_WIKI_USER_INFO_TABLE = \
@@ -265,9 +266,9 @@ STATEMENT_INSERT_WIKI_USER = \
     insert into jam_wiki_user ( \
       wiki_user_id, login, display_name, create_date, \
       last_login_date, create_ip_address, last_login_ip_address, \
-      is_admin, remember_key \
+      is_admin, remember_key, default_locale \
     ) values ( \
-      ?, ?, ?, ?, ?, ?, ?, ?, ? \
+      ?, ?, ?, ?, ?, ?, ?, ?, ?, ? \
     )
 STATEMENT_INSERT_WIKI_USER_INFO = \
     insert into jam_wiki_user_info ( \
@@ -390,7 +391,8 @@ STATEMENT_SELECT_WIKI_FILE_VERSIONS = \
 STATEMENT_SELECT_WIKI_USER = \
     select wiki_user_id, login, display_name, \
       create_date, last_login_date, create_ip_address, \
-      last_login_ip_address, is_admin, remember_key \
+      last_login_ip_address, is_admin, remember_key, \
+      default_locale \
     from jam_wiki_user \
     where wiki_user_id = ?
 STATEMENT_SELECT_WIKI_USER_CHANGES_ANONYMOUS = \
@@ -490,7 +492,8 @@ STATEMENT_UPDATE_WIKI_USER = \
     display_name = ?, \
     last_login_date = ?, \
     last_login_ip_address = ?, \
-    is_admin = ? \
+    is_admin = ?, \
+    default_locale = ? \
     where wiki_user_id = ?
 STATEMENT_UPDATE_WIKI_USER_INFO = \
     update jam_wiki_user_info set \
